--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <font color="red"><h2>This site is still under contruction, but what you see here is what we are trying to do</h2></font>
   <h3>We love infographics. They are quick view of your day to day data, which are based on your activities</h3>
-  <font color="blue"><center><h4>Stay tuned we are planning on to be up and running before Christmas 2014</h4><center></font>
+  <font color="blue"><h3>Stay tuned we are planning on to be up and running by Christmas 2014</h3></font>
 </div>
 <hr>
 
