--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,10 @@
  */
 
  body {
-  padding-left: 30px
+  padding-left: 30px;
+  background-color: #525252;
+  padding-right: 30px;
+  padding-top: 30px
  }
 
  .mail {
