--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,5 +1,5 @@
 <div class="members">
-  <% @members.each do |m| %>
+  <% @members.each do |member| %>
     <%= link_to member.name, member %>
   <% end %>
 </div>
