--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,4 +1,6 @@
 <div class="member">
-  <%= @member.name %>
-  <%= @member.email %>
+  <ul>
+    <li><%= @member.name %></li>
+    <li><%= @member.email %></li>
+  </ul>
 </div>
