--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -4,6 +4,6 @@
 
     <%= render 'form' %>
     <hr>
-    <h4><%= link_to 'Members', memberrs_path %></h4>
+    <h4><%= link_to 'Members', members_path %></h4>
   </div>
 </body>
