--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,3 +28,12 @@
   font-color: red;
   padding-left: 30px;
  }
+
+ .post {
+  padding-left: 30px;
+  padding-right: 30px;
+ }
+
+ .span3 well {
+  background-color: #525252;
+ }
