--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -24,8 +24,14 @@
     <%= f.label :price %>
     <%= f.text_field :price, rows: 6 %>
   </div>
+  <div class="field">
+    <%= f.label "Vendors" %>
+    <%= f.collection_check_boxes :vendor_ids, Vendor.all, :id, :name do |cb| %>
+      <%= cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
+    <% end %>
+  </div>
   <div class="actions">
-    <%= f.submit @product.new_record? ? "Publish" : "Update", class: 'btn btn-success btn-lg' %>
+    <%= f.submit @product.new_record? ? "Add Product" : "Update Product", class: 'btn btn-success btn-lg' %>
   </div>
   <% end %>
 </div>
