--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,11 +34,10 @@
 
  .post {
   padding-left: 30px;
-  padding-right: 30px;
  }
 
- .span3 well {
-  background-color: #525252;
+ .product {
+  padding-left: 30px;
  }
 
  #sticky {
