--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -30,8 +30,9 @@
       <%= cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
     <% end %>
   </div>
+  <br/>
   <div class="actions">
-    <%= f.submit @product.new_record? ? "Add Product" : "Update Product", class: 'btn btn-success btn-lg' %>
+    <%= f.submit @product.new_record? ? "Add Product" : "Update Product", class: 'btn btn-success btn-md' %>
   </div>
   <% end %>
 </div>
