css form helper

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,7 +21,7 @@
     <%= f.text_field :content %>
   </div>
   <div class="actions">
-    <%= f.submit @post.new_record? ? "Publish" : "Update", class: 'btn btn-success btn-lg' %>
+    <%= f.submit @post.new_record? ? "Publish" : "Update", class: 'btn btn-success btn-md' %>
   </div>
   <% end %>
 </div>
