--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="product">
-  <%= form_for @product do |f| %>
+  <%= form_for [@vendor, @product] do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this post from being saved:</h2>
