--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -21,7 +21,7 @@
   </div>
   <hr>
 
-  <h3>We love infographics. They are quick view of your day to day data, which are based on your activities</h3>
+  <h3>We love charts. They are quick view of your day to day data, which are based on your activities</h3>
   <hr>
   <div class="row">
 
