--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,6 +1,6 @@
 <body>
   <div class="row">
-    <font color="red"><h2>This site is still under contruction, but what you see here is what we are trying to do</h2></font>
+    <font color="red"><h2>This site is still under contruction, please come back to visit us later </h2></font>
   </div>
   <hr>
 
