--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,7 +29,8 @@
 
 .vendor {
   font-color: red;
-  padding-left: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
  }
 
  .post {
@@ -37,7 +38,8 @@
  }
 
  .product {
-  padding-left: 30px;
+  padding-left: 20px;
+  padding-right: 20px
  }
 
  #sticky {
@@ -56,7 +58,7 @@
   box-shadow: 0px 0px 15px 0px #000000;
   /* Adds the transparent background */
   background-color: #003366;
-  opacity: 0.9;
+  opacity: 0.7;
 }
 
 #sticky li {
