--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -39,7 +39,7 @@
 
   </div>
   <hr>
-  <font color="red"><h3>Stay tuned we are planning on to be up and running by Christmas 2014</h3></font>
+  <font color="red"><h3>Stay tuned we are really close to the launching day</h3></font>
   <hr>
   <!-- area chart -->
   <div class="row">
