--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <ul class="pull-left">
             <li><%= link_to "PaperThinCut", root_path %></li>
             <li>
-              <%= link_to 'Post', new_post_path %>
+              <%= link_to 'Updates', posts_path %>
             <li>
               <%= link_to "Vendor", new_vendor_path %>
             </li>
