--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,8 @@
     </div>
     <% end %>
     <hr>
-    <%= link_to "New Post", new_post_path %>
   </ul>
+  <hr>
+  <%= link_to "Post Here", new_post_path, class:"btn btn-primary btn-sm" %>
 </div>
 
