--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,6 @@
 <div class="product">
   <% @products.each do |product| %>
     <%= product.name %>
+    <%= product.description %>
   <% end %>
 </div>
