--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,7 +48,7 @@
   z-index:1000;
   top: 0px;
   width: 100%;
-  height: 50px;
+  height: 60px;
   top: 0px;
   left: 0px;
   right: 0px;
@@ -57,8 +57,8 @@
   -moz-box-shadow: 0px 0px 15px 0px #000000;
   box-shadow: 0px 0px 15px 0px #000000;
   /* Adds the transparent background */
-  background-color: #003366;
-  opacity: 0.7;
+  background-color: #00FA9A;
+  opacity: 0.8;
 }
 
 #sticky li {
