--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -32,7 +32,7 @@
   </div>
   <br/>
   <div class="actions">
-    <%= f.submit @product.new_record? ? "Add Product" : "Update Product", class: 'btn btn-primary btn-md' %>
+    <%= f.submit @product.new_record? ? "Add Product" : "Update Product", class: 'btn btn-success btn-md' %>
   </div>
   <% end %>
 </div>
