--- a/app/views/app_mailer/order_confirmation.html.erb
+++ b/app/views/app_mailer/order_confirmation.html.erb
@@ -1,7 +1,7 @@
 <h4>Orders for next delivery day: </h4>
 <div class="mail">
-  <%= @order.product %>
-  <%= @order.quantity %> <%= @order.unit %>
+  <%= @order.name %>
+  <%= @order.quantity %>
   <%= @order.description %>
 </div>
 <h4>Thank you</h4>
