--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,8 @@
     <div class="nav">
       <div class="container">
         <div class="row">
-          <ul class="pull-left">
-            <li><%= link_to "PaperThinCut", root_path %></li>
-            <li>
-              <%= link_to 'Updates', posts_path %>
-            <li>
-              <%= link_to "Vendor", new_vendor_path %>
-            </li>
-            <li>
-              <%= link_to "Product", new_product_path %>
-            </li>
+          <ul>
+            <%= link_to "PaperThinCut", root_path %>
           </ul>
         </div>
       </div>
