--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,24 +22,9 @@
   padding-top: 65px
  }
 
- .mail {
-  font-color: blue;
-  font-size: 16px;
- }
 
-.vendor {
-  font-color: red;
-  padding-left: 20px;
-  padding-right: 20px;
- }
-
- .post {
+ .main {
   padding-left: 30px;
- }
-
- .product {
-  padding-left: 20px;
-  padding-right: 20px
  }
 
  #sticky {
@@ -67,11 +52,8 @@
 }
 
 #sticky a {
-  font-size: 14px;
-  color: white;
+  font-size: 18px;
+  color: black;
   font-family: Comic Sans MS, serif;
 }
 
-form {
-  display: inline;
-}
