--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="row">
           <ul>
-            <%= link_to "PaperThinCut", root_path %>
+            <%= link_to "PaperThin", root_path %>
           </ul>
         </div>
       </div>
