--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,7 +33,7 @@
   z-index:1000;
   top: 0px;
   width: 100%;
-  height: 55px;
+  height: 50px;
   top: 0px;
   left: 0px;
   right: 0px;
@@ -42,17 +42,17 @@
   -moz-box-shadow: 0px 0px 15px 0px #000000;
   box-shadow: 0px 0px 15px 0px #000000;
   /* Adds the transparent background */
-  background-color: #00FA9A;
+  background-color: #9ACD32;
   opacity: 0.8;
 }
 
 #sticky li {
   display: inline;
-  padding-right: 23px;
+  padding-right: 2px;
 }
 
 #sticky a {
-  font-size: 18px;
+  font-size: 20px;
   color: black;
   font-family: Comic Sans MS, serif;
 }
