--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,2 +1,9 @@
-<% form_for @post each do |f| %>
+<%= form_for @post do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <br/>
+  <%= f.label :content %>
+  <%= f.text_area :content %>
+  <hr>
+  <%= f.submit(@post.new_record? ? "Create Message" : "Update Message") %>
 <% end %>
