--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,6 +1,9 @@
 <div class="main">
   <%= @goods.each do |good| %>
-    <%= good.name %>
-    <% end %>
-
+  <ul>
+    <li><%= link_to good.name, good %></li>
+  </ul>
+  <% end %>
+  <hr>
+  <%= link_to "Add Product", new_good_path %>
 </div>
