--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
       <div class="container">
         <div class="row">
           <ul>
-            <%= link_to "PaperThin", root_path %>
+            <li><%= link_to "PaperThin", root_path %></li>
+            <li><%= link_to "Products", goods_path %></li>
           </ul>
         </div>
       </div>
