--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,13 @@
   padding-left: 30px;
  }
 
+ .goods {
+  padding-left: 30px;
+  font-size: 20px;
+  color: red;
+  display: inline;
+ }
+
  #sticky {
   margin: auto;
   position: fixed;
