--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,5 +1,5 @@
 <div class="main">
-  <%= @goods.each do |good| %>
+  <% @goods.each do |good| %>
   <ul>
     <li><%= link_to good.name, good %></li>
   </ul>
