--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -5,5 +5,7 @@
     <li> Price : <%= @good.price %></li>
     <br/>
     <%= link_to "Edit", edit_good_path %>
+    <%= link_to 'Delete', good_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+  </ul>
   </ul>
 </div>
