show page distributor.goods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>PaperThinCut - charts at work</title>
-  <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-    <%= csrf_meta_tags %>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-</head>
-<body>
-  <div id="sticky">
-    <div class="nav">
-      <div class="container">
-        <div class="row">
-          <ul>
+  <head>
+    <title>PaperThinCut - charts at work</title>
+    <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+      <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+      <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+      <%= csrf_meta_tags %>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+      <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+      <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+  </head>
+  <body>
+    <div id="sticky">
+      <div class="nav">
+        <div class="container">
+          <ul class="row">
             <li><%= link_to "PaperThin", root_path, :class => 'brand' %></li>
-            <li><%= link_to "Products", goods_path %></li>
+            <li>
+              <%= link_to (new_good_path) do %>
+                <i class="icon-plus"></i>
+                Product
+              <% end %>
+            </li>
+            <li>
+              <%= link_to(new_distributor_path) do %>
+                <i class="icon-plus"></i>
+                Distributor
+              <% end %>
+            </li>
           </ul>
         </div>
       </div>
     </div>
-  </div>
+    <%= yield %>
 
-  <%= yield %>
-  <div class="main">
-  </div>
-
-</body>
+  </body>
 </html>
