--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,12 +19,16 @@
   padding-left: 20px;
   background-color: #525252;
   padding-right: 30px;
-  padding-top: 70px;
+  padding-top: 80px;
  }
 
 
  .main {
   padding-left: 30px;
+ }
+
+ li {
+  list-style: none;
  }
 
  .goods {
@@ -40,7 +44,7 @@
   z-index:1000;
   top: 0px;
   width: 100%;
-  height: 50px;
+  height: 60px;
   top: 0px;
   left: 0px;
   right: 0px;
@@ -59,7 +63,7 @@
 }
 
 #sticky a {
-  font-size: 20px;
+  font-size: 15px;
   color: black;
   font-family: Comic Sans MS, serif;
 }
