--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,6 @@
-<div class="main">
-  <h4>Messages</h4>
+<div class="span5 well">
+  <h3>Messages</h3>
+  <br/>
   <% @posts.each do |post| %>
   <ul>
     <li><%= link_to post.title, post %></li>
