--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,15 +16,10 @@
  @import "bootstrap-responsive";
 
  body {
-  padding-left: 20px;
+  padding-left: 10px;
   background-color: #525252;
-  padding-right: 30px;
-  padding-top: 80px;
- }
-
-
- .main {
-  padding-left: 30px;
+  padding-right: 10px;
+  padding-top: 70px;
  }
 
  li {
@@ -44,7 +39,7 @@
   z-index:1000;
   top: 0px;
   width: 100%;
-  height: 60px;
+  height: 55px;
   top: 0px;
   left: 0px;
   right: 0px;
@@ -53,8 +48,8 @@
   -moz-box-shadow: 0px 0px 15px 0px #000000;
   box-shadow: 0px 0px 15px 0px #000000;
   /* Adds the transparent background */
-  background-color: #9ACD32;
-  opacity: 0.8;
+  background-color: #880000 ;
+  opacity: 0.9;
 }
 
 #sticky li {
@@ -63,9 +58,10 @@
 }
 
 #sticky a {
-  font-size: 15px;
+  font-size: 14px;
   color: black;
   font-family: Comic Sans MS, serif;
+  padding-left: 15px;
 }
 
 .container {
