--- a/app/views/distributors/index.html.erb
+++ b/app/views/distributors/index.html.erb
@@ -1,5 +1,10 @@
-<div class="main">
+
+<div class="span5 well">
+  <h3>Distributors</h3>
+  <br/>
   <% @distributors.each do |distributor| %>
     <li><%= link_to distributor.name, distributor %></li>
   <% end %>
+  <hr>
+  <%= link_to "Add Distributor", new_distributor_path(@distributor) %>
 </div>
