created basket and items

--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <h4><li><%= @good.name %></li></h4>
     <li><%= @good.description %></li>
-    <li> Price : <%= @good.price %></li>
+    <li><%= @good.price %></li>
     <br/>
     <%= link_to "Edit", edit_good_path %>
     <%= link_to 'Delete', good_path, method: :delete, data: { confirm: 'Are you sure?' } %>
