--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -17,5 +17,8 @@
   <%= form_for(@basket) do |f| %>
     <%= f.label :info %>
     <%= f.text_area :info %>
+  <hr>
+  <%= f.submit %>
   <% end %>
 </div>
+
