requests_controller and model updates

--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,7 +1,7 @@
 <div class="span5 well">
   <%= form_for @request do |f| %>
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, size: 40 %>
     <br/>
     <%= f.label :email %>
     <%= f.text_field :email %>
