--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -7,3 +7,6 @@
   <hr>
   <%= link_to "Add Product", new_good_path %>
 </div>
+<div class="span6 well">
+  <%= column_chart Good.group(:name).count %>
+</div>
