--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -6,5 +6,9 @@
     <br/>
     <%= link_to "Edit", edit_good_path %>
     <%= link_to 'Delete', good_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+
   </ul>
+</div>
+<div class="span8 well">
+  <%= column_chart Item.group(:good_id).count %>
 </div>
