--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PaperThinCut - charts at work</title>
+    <title>PaperThinCut - quick look and make decision</title>
       <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
       <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
       <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
@@ -17,7 +17,7 @@
           <strong><li><%= link_to "//PaperThin", root_path %></li></strong>
           <li>
             <%= link_to (goods_path) do %>
-              Products
+              Analytics
             <% end %>
           </li>
           <li>
