add item_id to requests

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,5 +1,5 @@
 <div class="span8 well">
-  <%= column_chart Request.group(:email).count %>
+  <%= column_chart Request.group(:item_id).count %>
 </div>
 <div class="span5 well">
   <% @requests.each do  |request| %>
