--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -5,5 +5,5 @@
 </div>
 
 <div class="span8 well">
-  <%= column_chart Request.group(:item_id).count %>
+  <%= pie_chart Request.group(:created_at).count %>
 </div>
