delete request method

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,6 +2,7 @@
   <%= @request.name %>
   <br/>
   <%= @request.email %>
+  <%= link_to 'Delete', @request_path, method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
 
 <div class="span8 well">
