--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -3,10 +3,10 @@
 <% end %>
 
 <div class="span5 well">
-  <h4>Order Basket</h4>
+  <h4>Order Cart</h4>
   <ul>
     <% @basket.items.each do |item| %>
-     <li><%= item.amount %> &times; <%= item.good.name %></li>
+     <li><%= item.amount %> <%= item.good.unit %> <%= item.good.name %></li>
     <% end %>
     <br/>
     <li><%= link_to 'select more', :back %></li>
