--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -5,9 +5,14 @@
     <%= f.text_field :name %>
   </div>
   <br/>
-  <div class="control-group>">
+  <div class="control-group">
     <%= f.label :description %>
     <%= f.text_area :description %>
+  </div>
+  <br/>
+  <div class="control-group">
+    <%= f.label :unit %>
+    <%= f.text_field :unit %>
   </div>
   <br/>
   <div class="control-group>">
