--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -10,4 +10,6 @@
 <div class="span5 well">
   <%= link_to "See Orders", requests_path %>
 </div>
-
+<div class="span5 well">
+  <%= link_to "Notes", posts_path %>
+</div>
