--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -3,6 +3,7 @@
     <h4><li><%= @good.name %></li></h4>
     <li><%= @good.description %></li>
     <li><%= @good.price %></li>
+    <li><%= @good.unit %></li>
     <br/>
     <%= link_to "Edit", edit_good_path %>
     <%= link_to 'Delete', good_path, method: :delete, data: { confirm: 'Are you sure?' } %>
