--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -6,6 +6,9 @@
     <%= f.label :email %>
     <%= f.text_field :email %>
     <br/>
+    <%= f.label :additional %>
+    <%= f.text_area :additional %>
+    <br/>
     <%= f.submit %>
   <% end %>
 </div>
