--- a/app/views/app_mailer/request_deliver.html.erb
+++ b/app/views/app_mailer/request_deliver.html.erb
@@ -1,7 +1,6 @@
-
 <h3><%= @request.name %></h3>
 <h4>Order for the next delivery day</h4>
 <br/>
 <table>
-<%= render @request.items %>
+<font color="red"><%= render @request.items %></font>
 </table>
