--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           </li>
           <li>
             <%= link_to (distributors_path) do %>
-              Distributors
+              Order
             <% end %>
           </li>
         </ul>
