--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,7 +1,7 @@
 <table>
   <tr>
     <td><%= item.amount %><td>
-    <td><%= item.good.unit %> of</td>
+    <td><%= item.good.unit %> -></td>
     <td><%= item.good.name %></td>
   </tr>
 </table>
