--- a/app/views/app_mailer/request_deliver.html.erb
+++ b/app/views/app_mailer/request_deliver.html.erb
@@ -1,5 +1,5 @@
 <h3><%= @request.name %></h3>
-<h4>Order for the next delivery day</h4>
+<h4>Order : </h4>
 <br/>
 <table>
 <font color="red"><%= render @request.items %></font>
