--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -7,9 +7,12 @@
   <hr>
   <%= link_to "Add Product", new_good_path %>
 </div>
-<div class="span5 well">
+<div class="span3 well">
   <%= link_to "See Orders", requests_path %>
 </div>
-<div class="span5 well">
+<div class="span3 well">
   <%= link_to "Notes", posts_path %>
+</div>
+<div class="span3 well">
+  <%= link_to "See Users", users_path %>
 </div>
